configs/ingress/ingress_monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
spec:
  ingressClassName: "nginx"
  rules:
  - host: grafana.kubernetes.local.cttc.es
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
  - host: prometheus.kubernetes.local.cttc.es
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port:
              number: 9090
  - host: alertmanager.kubernetes.local.cttc.es
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-alertmanager
            port:
              number: 9093
